@@ -3,7 +3,7 @@ dnl Process this file with autoconf to produce a configure script.
 dnl
 AC_REVISION($Id$)
 
-AC_INIT([expect],[5.44.1.1])
+AC_INIT([expect],[5.44.1.2])
 
 TEA_INIT([3.5])
 
